toefx-client/src/componentsStyle/Upload-Mobile.css
.foot-button {
    background-color: RGB(200, 200, 200);
    border: 0px;
    border-radius: .25rem;
    width: 45%;
}

.footlogMobile {
    width: 100%;
}
.feet-buttons {
    padding-top: 2%;
}
.foot-button{
    margin-right: 1%;
}
.overLay_div_relative {
    position: relative;
    width: 0;
    height: 0;
    left: 20%;
}
.overLay_div_absolute {
    position: absolute;
    bottom: 1px;
    
}

.overLay {
    width: 50vw;
}

.vidoeFeed {
    position: relative;
    left: 50%;
    width: 100%;
    transform: translateX(-50%);
    display: flex; 
    align-items: center; 
    justify-content: center; 
    text-align: center;
}
@media (orientation: landscape) {
    .foot-button {
        width: 20vw;
    }
}

@media (min-width: 700px){
    .foot-button {
        width: 20vw;
    }
}

.captureBtn{
    margin-top: 1%;
}

.doneBtn {
    margin-top: 1%;
    margin-left: 1%;
    background-color: green !important;
}

.imageCanvas {
    margin-top: 1%;
    width: 95%;
    margin-bottom: 35vh;
}

.uploadedImg-mobile {
    margin-top: 6%;
    margin-bottom: 10%;
    width: 70vw;
}
@media (min-width: 1000px) {
    .uploadedImg-mobile {
        width: 50vw;
    }
}

.decomposedRow_mobile {
    border-radius: 10px;
    margin-bottom: 4%;
    overflow: hidden;
    margin-left: 3%;
    width: 95%;
}
@media (min-width: 1000px) {
    .decomposedRow_mobile {
        width: 45%;
    }
}

.decomposeImage_mobile {
    border-radius: 5px;
    width: 100%;
    height: 100%;
    min-height: 150px;
}

.decomposed_Img_Div_mobile {
    float: left;
    width: 150px;
    height: 100%;
}

.decomposeImageRow {

}


@media (max-width: 400px) {
    .decomposed_Img_Div_mobile {
        display: inline;
    }
    .decomposeImageRow {
        display: inline;
    }
    .decomposedRow_mobile {
        max-width: 400px;
    }
}



.decompose_keepDiscard_mobile {
    position: relative;
    top: 35px;
    display: inline-block; 
    align-items: center;
    justify-content: center;
}

.discardBtn_mobile {
    background-color: red !important;
    display: block;
    margin: 5%;
    padding-right: 10px;
    width: 15vw;
    min-width: 100px;
}
.keepBtn_mobile {
    background-color: green !important;
    display: block;
    margin: 5%;
    width: 15vw;
    min-width: 100px;
}

.select_the_toe_TEXT {
    margin: auto;
}

.saveBtn_mobile{
    margin-top: 1%;
}
@media (max-width: 400px) {
    .saveBtn_mobile{
        margin-top: 6%;
    }
    .toeButtons_mobile {
        padding-top: 2%;
    }
}

@media (min-width: 400px) {
    .select_the_toe_TEXT {
        float: left;
        margin: 2%;
    }
    .toeButtons_mobile {
        padding-top: 6%;
        padding-right: 20%;
    }
}
@media (min-width: 1000px) {
    .toeButtons_mobile {
        padding-top: 10%;
        padding-right: 0;
    }
}

.cameraIcon {
    width: 20%;
    margin-left: 30%;
    margin-bottom: 2%;
}

.galleryIcon {
    width: 20%;
    margin-left: 30%;
    margin-bottom: 2%;
}

.upload-image-button_mobile {
    font-size: 24px !important;
    width: 100%;
    padding: 20px 40px;
    border-radius: 10px;
    cursor: pointer;
}

